src/objects/Note__c.object
<CustomObject>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Content__c</fullName>
        <label>Note Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Note</label>
    <nameField>
        <displayFormat>note-{000}</displayFormat>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <recordTypes>
        <fullName>Approved_With_Conditions</fullName>
        <active>true</active>
        <label>Approved With Conditions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Archived_Credit_Bureau</fullName>
        <active>true</active>
        <label>Archived Credit Bureau</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Bankruptcies</fullName>
        <active>true</active>
        <label>Business Bankruptcies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funding</fullName>
        <active>true</active>
        <label>Funding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Bankrupties</fullName>
        <active>true</active>
        <label>Individual Bankrupties</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Processing_Notes</fullName>
        <active>true</active>
        <label>Internal Processing Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_QC</fullName>
        <active>true</active>
        <label>Internal QC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_UnderWriting</fullName>
        <active>true</active>
        <label>Internal UW Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Qual</fullName>
        <active>true</active>
        <label>Pre Qual Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Qual_Loss</fullName>
        <active>true</active>
        <label>Pre Qual Loss</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prefunding_Call</fullName>
        <active>true</active>
        <label>Prefunding Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processing</fullName>
        <active>true</active>
        <label>Processing Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quancor</fullName>
        <active>true</active>
        <label>Quancor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <label>Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk_Alert</fullName>
        <active>true</active>
        <label>Risk Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk_Notes</fullName>
        <active>true</active>
        <label>Risk Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>SA_Internal</fullName>
        <active>true</active>
        <label>SA Internal Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Check_List</fullName>
        <active>false</active>
        <label>Sales Check List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_to_UW_Processing</fullName>
        <active>false</active>
        <label>Sales Notes to UW &amp; Processing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site</fullName>
        <active>true</active>
        <label>Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Split_change</fullName>
        <active>true</active>
        <label>Split change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Third_Party_Underwriting_Notes</fullName>
        <active>true</active>
        <label>Third Party UW Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>UW_Notes_to_Processing_Risk_Department</fullName>
        <active>true</active>
        <label>UW Notes to Processing/Risk Department</label>
    </recordTypes>
    <recordTypes>
        <fullName>UW_Processing</fullName>
        <active>true</active>
        <label>UW Processing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Underwriting</fullName>
        <active>true</active>
        <label>UW Notes</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>